[package]
name = "zk-oracle-host"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
zk-oracle-methods = { workspace = true }
